--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,20 @@
     <groupId>org.example</groupId>
     <artifactId>serialization-java</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <!-- преобразование с Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.0</version>
+        </dependency>
+        <!-- преобразование с XML -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.16.0</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
